fix: footer collapse

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -7,7 +7,6 @@
 }
 
 a {
-  display: block;
   text-decoration: none;
 }
 
